{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 12,
  "lineage": "882c66eb-b03d-a897-4180-570da37791c2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wg_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-021589336d307b577",
            "arn": "arn:aws:ec2:us-east-1:820313037034:instance/i-0ca45c2524189c4c8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ca45c2524189c4c8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "wireguard-relay",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fe5e57b8e09ceba0",
            "private_dns": "ip-10-0-1-175.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.175",
            "public_ip": "13.222.11.229",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-011b1810737a3f0a8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09e64b6d131532141",
            "tags": {
              "Name": "WireGuard-Server"
            },
            "tags_all": {
              "Name": "WireGuard-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0387ea81e6cf22111"
            ]
          },
          "dependencies": [
            "aws_security_group.wg_sg",
            "aws_subnet.wg_subnet",
            "aws_vpc.wg_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wg_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:820313037034:internet-gateway/igw-0f08d1f0d3dddb3ee",
            "id": "igw-0f08d1f0d3dddb3ee",
            "owner_id": "820313037034",
            "tags": {
              "Name": "WireGuard-GW"
            },
            "tags_all": {
              "Name": "WireGuard-GW"
            },
            "vpc_id": "vpc-07ab2002f627ba021"
          },
          "dependencies": [
            "aws_vpc.wg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wg_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:820313037034:route-table/rtb-07e1e7813a9702dd7",
            "id": "rtb-07e1e7813a9702dd7",
            "owner_id": "820313037034",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f08d1f0d3dddb3ee",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "WireGuard-RouteTable"
            },
            "tags_all": {
              "Name": "WireGuard-RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ab2002f627ba021"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.wg_gw",
            "aws_vpc.wg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b84c14f81a6fdaca",
            "route_table_id": "rtb-07e1e7813a9702dd7",
            "subnet_id": "subnet-09e64b6d131532141"
          },
          "dependencies": [
            "aws_route_table.wg_rt",
            "aws_subnet.wg_subnet",
            "aws_vpc.wg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wg_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:820313037034:security-group/sg-0387ea81e6cf22111",
            "description": "Allow WireGuard and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0387ea81e6cf22111",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 51820,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 51820
              }
            ],
            "name": "wireguard-sg",
            "name_prefix": "",
            "owner_id": "820313037034",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WireGuard-SG"
            },
            "tags_all": {
              "Name": "WireGuard-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ab2002f627ba021"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wg_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:820313037034:subnet/subnet-09e64b6d131532141",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e64b6d131532141",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "820313037034",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "WireGuard-Subnet"
            },
            "tags_all": {
              "Name": "WireGuard-Subnet"
            },
            "vpc_id": "vpc-07ab2002f627ba021"
          },
          "dependencies": [
            "aws_vpc.wg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wg_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:820313037034:vpc/vpc-07ab2002f627ba021",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00dc3bf5f7cfb8574",
            "default_route_table_id": "rtb-0fc540dd276dd4d1b",
            "default_security_group_id": "sg-03dfb12cc143fad8a",
            "dhcp_options_id": "dopt-0c6ea20ddd8dc220e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07ab2002f627ba021",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fc540dd276dd4d1b",
            "owner_id": "820313037034",
            "tags": {
              "Name": "WireGuard-VPC"
            },
            "tags_all": {
              "Name": "WireGuard-VPC"
            }
          }
        }
      ]
    }
  ]
}